add footer, add aniamtions

--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
   </header>
 
   <section class="banner">
+
+    <div class="stars stars__banner">
+      <div class="stars__item">
+        <img src="./assets/img/stars/stars-banner-1.svg" alt="stars" aria-hidden="true">
+      </div>
+
+      <div class="stars__item">
+        <img src="./assets/img/stars/stars-banner-2.svg" alt="stars" aria-hidden="true">
+      </div>
+    </div>
+
     <div class="banner-img">
       <div class="banner-img__rover">
         <svg width="1917" height="459" viewBox="0 0 1917 459" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -538,7 +549,11 @@
 
       </div>
       <div class="banner-img__main">
-        <img src="./assets/img/img-banner-bg.svg" alt="tower">
+        <img src="./assets/img/img-banner-bg-1.svg" alt="tower">
+
+        <div class="banner-img__additional">
+          <img src="./assets/img/img-banner-bg-additional.svg" alt="additional" aria-hidden="true">
+        </div>
       </div>
     </div>
 
@@ -583,11 +598,15 @@
 
               <div class="separate-header__btn__container">
                 <button class="_btn separate-bullet">
-                  Mainnet
+                  <span class="button__inner">
+                    Mainnet
+                  </span>
                 </button>
 
                 <button class="_btn _reverse separate-bullet">
-                  Testnet
+                  <span class="button__inner">
+                    Testnet
+                  </span>
                 </button>
               </div>
             </div>
@@ -639,8 +658,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -676,8 +697,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -713,8 +736,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -750,8 +775,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -787,8 +814,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -824,8 +853,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -861,8 +892,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -898,8 +931,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -935,8 +970,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -979,8 +1016,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -1016,8 +1055,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -1053,8 +1094,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -1090,8 +1133,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -1127,8 +1172,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -1164,8 +1211,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -1201,8 +1250,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -1238,8 +1289,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -1275,8 +1328,10 @@
                               </p>
                             </div>
                             <div class="stake-info__button__container">
-                              <a href="#" class="_btn stake-info__button">
-                                Stake Now!
+                              <a href="#" class="stake-info__button">
+                                <span class="button__inner">
+                                  Stake Now!
+                                </span>
                               </a>
                             </div>
                           </div>
@@ -1295,6 +1350,12 @@
   </section>
 
   <section class="about">
+    <div class="stars stars__about">
+      <div class="stars__item">
+        <img src="./assets/img/stars/stars-about-1.svg" alt="stars" aria-hidden="true">
+      </div>
+    </div>
+
     <div class="_container about__container">
       <div class="about__wrapper">
 
@@ -1408,6 +1469,11 @@
   </section>
 
   <section class="partners">
+    <div class="stars stars__partners">
+      <div class="stars__item">
+        <img src="./assets/img/stars/stars-partners-1.svg" alt="stars" aria-hidden="true">
+      </div>
+    </div>
     <div class="_container partners__container">
       <div class="partners__wrapper">
 
@@ -1566,7 +1632,171 @@
     </div>
   </section>
 
-  <section></section>
+  <footer class="footer">
+    <div class="stars stars__footer">
+      <div class="stars__item">
+        <img src="./assets/img/stars/stars-footer-1.svg" alt="stars" aria-hidden="true">
+      </div>
+      <div class="stars__item">
+        <img src="./assets/img/stars/stars-footer-2.svg" alt="stars" aria-hidden="true">
+      </div>
+    </div>
+    <div class="_container footer__container">
+      <div class="footer__wrapper">
+
+        <div class="footer-content">
+
+          <div class="footer-content__row">
+
+            <div class="footer-content__item">
+              <div class="footer-block">
+                <div class="footer-block__title__container">
+                  <p class="footer-block__title">
+                    NAVIGATION
+                  </p>
+                </div>
+
+                <div class="footer-block__main">
+                  <nav class="footer-navigation">
+                    <ul class="footer-navigation__list">
+                      <li>
+                        <a href="#" class="footer-navigation__item">
+                          Mainnet
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#" class="footer-navigation__item">
+                          Testnet
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#" class="footer-navigation__item">
+                          About us
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#" class="footer-navigation__item">
+                          Partnership
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#" class="footer-navigation__item">
+                          Contacts
+                        </a>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer-content__item">
+
+              <div class="footer-block">
+                <div class="footer-block__title__container">
+                  <p class="footer-block__title">
+                    CONTACT
+                  </p>
+                </div>
+
+                <div class="footer-block__main">
+                  <div class="footer-contatcs">
+                    <div class="footer-contatcs__item">
+                      <a href="mailto:support@w3coins.com">support@w3coins.com</a>
+                    </div>
+                    <div class="footer-contatcs__item">
+                      <p>
+                        Based in Germany
+                      </p>
+                    </div>
+                    <div class="footer-contatcs__item">
+                      <p>
+                        Bismarckstr 142<span></span> 47057 Duisburg
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="footer-block">
+                <div class="footer-block__title__container">
+                  <p class="footer-block__title">
+                    FOLLOW US ON SOCIAL MEDIA
+                  </p>
+                </div>
+
+                <div class="footer-block__main">
+                  <ul class="footer-socials">
+                    <li>
+                      <a href="#" class="footer-socials__item">
+                        <span class="footer-socials__label">
+                          <img src="./assets/img/label-socials-1.svg" alt="socials-1">
+                        </span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="footer-socials__item">
+                        <span class="footer-socials__label">
+                          <img src="./assets/img/label-socials-2.svg" alt="socials-2">
+                        </span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="footer-socials__item">
+                        <span class="footer-socials__label">
+                          <img src="./assets/img/label-socials-3.svg" alt="socials-3">
+                        </span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="footer-socials__item">
+                        <span class="footer-socials__label">
+                          <img src="./assets/img/label-socials-4.svg" alt="socials-4">
+                        </span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer-content__row">
+
+            <div class="footer-content__item">
+              <div class="footer-block">
+                <div class="footer-block__main">
+                  <p>
+                    © Copyright 2022 w3coins
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer-content__item">
+              <div class="footer-block">
+                <div class="footer-block__main">
+                  <p>
+                    Created by <a href="#">Impulse Design</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bg">
+        <div class="footer-bg__main">
+          <img src="./assets/img/img-footer-bg.svg" alt="tower">
+
+          <div class="footer-bg__additional">
+            <img src="./assets/img/img-footer-additional.svg" alt="additional" aria-hidden="true">
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
